--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+}
+.app {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	padding: 40px 24px;
+	border-top: 15px solid pink;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__searchForm {
+	margin-top: 17px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__input {
+	padding: 6px 16px;
+	min-width: 200px;
+	max-width: 100vw;
+	font-size: 1.1rem;
+	border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app__submit {
+	margin-left: 1rem;
+	padding: 6px 16px;
+	background-color: rgb(101, 172, 148);
+    color: white;
+	border-radius: 15px;
+	cursor: pointer;
+	font-size: 1.1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.app__submit:hover,
+.app__submit:active {
+	color: rgb(7, 6, 17);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__healthLabels {
+	margin-left: 1rem;
+	font-size: 1.1rem;
+	padding: 6px 16px;
+	border-radius: 15px;
+	width: 150px;
 }
