displayed fetched recipes on Browser

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,10 @@
 	border-radius: 15px;
 	width: 150px;
 }
+
+.app__recipes {
+	margin-top: 24px;
+	display: grid;
+	grid-template-columns: 220px 220px;
+	align-items: baseline;
+}
