added regex to show different image formats

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 	justify-content: space-around;
 	align-items: center;
 	padding: 40px 24px;
-	border-top: 15px solid pink;
+	border-top: 15px solid orange;
 }
 
 .app__searchForm {
